@startuml

title __ENTITY's Class Diagram__\n

    namespace PY.appliVisiteur {
      namespace Model.Entity {
        class LPY.appliVisiteur.Model.Entity.Department {
            - code : String
            - id : long
            - name : String
            - workedTimes : Collection<WorkedTime>
            + getCode()
            + getId()
            + getName()
            + getWorkedTimes()
            + setCode()
            + setId()
            + setName()
            + setWorkedTimes()
        }
      }
    }

    namespace PY.appliVisiteur {
      namespace Model.Entity {
        class LPY.appliVisiteur.Model.Entity.Diploma {
            - id : long
            - name : String
            - pratitionners : Collection<Pratitionner>
            - speciality : String
            + getId()
            + getName()
            + getPratitionners()
            + getSpeciality()
            + setId()
            + setName()
            + setPratitionners()
            + setSpeciality()
        }
      }
    }

    namespace PY.appliVisiteur {
      namespace Model.Entity {
        class LPY.appliVisiteur.Model.Entity.Drug {
            - description : String
            - drugPresentations : Collection<DrugPresentation>
            - id : long
            - name : String
            + Drug()
            + getDescription()
            + getDrugPresentations()
            + getId()
            + getName()
            + setDescription()
            + setDrugPresentations()
            + setId()
            + setName()
        }
      }
    }

    namespace PY.appliVisiteur {
      namespace Model.Entity {
        class LPY.appliVisiteur.Model.Entity.DrugPresentation {
            - id : long
            + getDrug()
            + getReport()
            + setDrug()
            + setReport()
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Model.Entity {
        class LPY.appliVisiteur.Model.Entity.Pratitionner {
            - diplomas : Collection<Diploma>
            - first_name : String
            - id : long
            - reports : Collection<Report>
            + getDiplomas()
            + getFirst_name()
            + getId()
            + getReports()
            + setDiplomas()
            + setFirst_name()
            + setId()
            + setReports()
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Model.Entity {
        class LPY.appliVisiteur.Model.Entity.Region {
            - code : String
            - delegues : Collection<User>
            - id : long
            - name : String
            - reports : Collection<Report>
            - workedTimes : Collection<WorkedTime>
            + getCode()
            + getDelegues()
            + getId()
            + getName()
            + getReports()
            + getSector()
            + getWorkedTimes()
            + setCode()
            + setDelegues()
            + setId()
            + setName()
            + setReports()
            + setSector()
            + setWorkedTimes()
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Model.Entity {
        class LPY.appliVisiteur.Model.Entity.Report {
            - description : String
            - drugPresentations : Collection<DrugPresentation>
            - id : long
            - sampleNumber : int
            + Report()
            + getDescription()
            + getDrugPresentations()
            + getId()
            + getPratitionner()
            + getRegion()
            + getSampleNumber()
            + getUser()
            + setDescription()
            + setDrugPresentations()
            + setId()
            + setPratitionner()
            + setRegion()
            + setSampleNumber()
            + setUser()
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Model.Entity {
        class LPY.appliVisiteur.Model.Entity.Sector {
            - code : String
            - id : long
            - name : String
            + getCode()
            + getId()
            + getName()
            + setCode()
            + setId()
            + setName()
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Model.Entity {
        class LPY.appliVisiteur.Model.Entity.User {
            - codePostal : String
            - hiringDate : String
            - id : long
            - login : String
            - matricule : String
            - nom : String
            - password : String
            - prenom : String
            - reports : Collection<Report>
            - ville : String
            - workedTimes : Collection<WorkedTime>
            + getCodePostal()
            + getHiringDate()
            + getId()
            + getLogin()
            + getMatricule()
            + getNom()
            + getPassword()
            + getPrenom()
            + getRegion()
            + getReports()
            + getVille()
            + getWorkedTimes()
            + setCodePostal()
            + setHiringDate()
            + setId()
            + setLogin()
            + setMatricule()
            + setNom()
            + setPassword()
            + setPrenom()
            + setRegion()
            + setReports()
            + setVille()
            + setWorkedTimes()
        }
      }
    }
  

    namespace PY.appliVisiteur {
      namespace Model.Entity {
        class LPY.appliVisiteur.Model.Entity.WorkedTime {
            - dateEnd : Date
            - dateStart : Date
            - id : long
            + getDateEnd()
            + getDateStart()
            + getDepartment()
            + getId()
            + getRegion()
            + getUser()
            + setDateEnd()
            + setDateStart()
            + setDepartment()
            + setId()
            + setRegion()
            + setUser()
        }
      }
    }
  

  LPY.appliVisiteur.Model.Entity.DrugPresentation o-- LPY.appliVisiteur.Model.Entity.Drug : drug
  LPY.appliVisiteur.Model.Entity.DrugPresentation o-- LPY.appliVisiteur.Model.Entity.Report : report
  LPY.appliVisiteur.Model.Entity.Region o-- LPY.appliVisiteur.Model.Entity.Sector : sector
  LPY.appliVisiteur.Model.Entity.Report o-- LPY.appliVisiteur.Model.Entity.Pratitionner : pratitionner
  LPY.appliVisiteur.Model.Entity.Report o-- LPY.appliVisiteur.Model.Entity.Region : region
  LPY.appliVisiteur.Model.Entity.Report o-- LPY.appliVisiteur.Model.Entity.User : user
  LPY.appliVisiteur.Model.Entity.User o-- LPY.appliVisiteur.Model.Entity.Region : region
  LPY.appliVisiteur.Model.Entity.WorkedTime o-- LPY.appliVisiteur.Model.Entity.Department : department
  LPY.appliVisiteur.Model.Entity.WorkedTime o-- LPY.appliVisiteur.Model.Entity.Region : region
  LPY.appliVisiteur.Model.Entity.WorkedTime o-- LPY.appliVisiteur.Model.Entity.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
